// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Big Card matches snapshot 1`] = `
.c0 {
  display: block;
  background-color: white;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  height: auto;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-box-pack: stretch;
  -webkit-justify-content: stretch;
  -ms-flex-pack: stretch;
  justify-content: stretch;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow: hidden;
  -webkit-transition: box-shadow 0.15s ease-out,-webkit-transform 0.15s ease-out;
  -webkit-transition: box-shadow 0.15s ease-out,transform 0.15s ease-out;
  transition: box-shadow 0.15s ease-out,transform 0.15s ease-out;
  position: relative;
  border: 1px solid #e8e8e8;
  border-radius: 4px;
  width: 100%;
  padding: 24px;
  color: #2a2a2a;
  margin-bottom: 16px;
}

.c0 .sc-hKwCoD {
  margin-left: -24px;
  margin-right: -24px;
  margin-top: -24px;
  margin-bottom: 24px;
}

.c0 .sc-hKwCoD .sc-gsDJrp {
  padding: 24px;
}

@media screen and (min-width:30rem) {
  .c0 {
    padding: 48px;
  }
}

@media screen and (min-width:30rem) {
  .c0 .sc-hKwCoD {
    margin-left: -48px;
    margin-right: -48px;
    margin-top: -48px;
    margin-bottom: 48px;
  }
}

@media screen and (min-width:30rem) {
  .c0 .sc-hKwCoD .sc-gsDJrp {
    padding: 48px;
  }
}

<div
  class="c0"
  color="text.primary"
  width="1"
>
  Big card
</div>
`;

exports[`Dashed Card matches snapshot 1`] = `
.c0 {
  display: block;
  background-color: white;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  height: auto;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-box-pack: stretch;
  -webkit-justify-content: stretch;
  -ms-flex-pack: stretch;
  justify-content: stretch;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow: hidden;
  -webkit-transition: box-shadow 0.15s ease-out,-webkit-transform 0.15s ease-out;
  -webkit-transition: box-shadow 0.15s ease-out,transform 0.15s ease-out;
  transition: box-shadow 0.15s ease-out,transform 0.15s ease-out;
  position: relative;
  border: 2px dashed #e8e8e8;
  border-radius: 4px;
  width: 100%;
  padding: 16px;
  color: #2a2a2a;
  margin-bottom: 16px;
}

.c0 .sc-hKwCoD {
  margin-left: -24px;
  margin-right: -24px;
  margin-top: -24px;
  margin-bottom: 24px;
}

.c0 .sc-hKwCoD .sc-gsDJrp {
  padding: 16px;
}

@media screen and (min-width:30rem) {
  .c0 {
    padding: 24px;
  }
}

@media screen and (min-width:30rem) {
  .c0 .sc-hKwCoD .sc-gsDJrp {
    padding: 24px;
  }
}

<div
  class="c0"
  color="text.primary"
  width="1"
>
  Dashed card
</div>
`;

exports[`Default Card matches snapshot 1`] = `
.c0 {
  display: block;
  background-color: white;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  height: auto;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-box-pack: stretch;
  -webkit-justify-content: stretch;
  -ms-flex-pack: stretch;
  justify-content: stretch;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow: hidden;
  -webkit-transition: box-shadow 0.15s ease-out,-webkit-transform 0.15s ease-out;
  -webkit-transition: box-shadow 0.15s ease-out,transform 0.15s ease-out;
  transition: box-shadow 0.15s ease-out,transform 0.15s ease-out;
  position: relative;
  border: 1px solid #e8e8e8;
  border-radius: 4px;
  width: 100%;
  padding: 16px;
  color: #2a2a2a;
  margin-bottom: 16px;
}

.c0 .sc-hKwCoD {
  margin-left: -24px;
  margin-right: -24px;
  margin-top: -24px;
  margin-bottom: 24px;
}

.c0 .sc-hKwCoD .sc-gsDJrp {
  padding: 16px;
}

@media screen and (min-width:30rem) {
  .c0 {
    padding: 24px;
  }
}

@media screen and (min-width:30rem) {
  .c0 .sc-hKwCoD .sc-gsDJrp {
    padding: 24px;
  }
}

<div
  class="c0"
  color="text.primary"
  width="1"
>
  Default Card
</div>
`;
